[tool.poetry]
name = "donkeycar_sim_models"
version = "0.1.0"
description = ""
authors = ["Daniel Rich <drich@nav.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gym-donkeycar = "^1.0.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
